<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/dashboard" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_account_circle_black_24dp"
                    android:title="@string/account" />
            </menu>
        </item>
    </group>
    <item android:title="@string/newspapers">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_view"
                android:title="@string/breaking_news" />
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_manual"
                android:icon="@drawable/ic_library"
                android:title="@string/manual" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_close"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>