<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="#D8D8D8"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_marginTop="10dp"
        android:maxWidth="5sp"
        android:minHeight="5sp"
        android:src="@drawable/ic_logo"/>

    <EditText
        android:id="@+id/f_name"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/first_name"
        android:text="Samuel"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:drawableStart="@drawable/ic_logo"
        android:drawableLeft="@drawable/ic_logo"
        android:background="@drawable/background_round_corner_button"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#4C10B6" />

    <EditText
        android:id="@+id/l_name"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:drawableStart="@drawable/ic_logo"
        android:drawableLeft="@drawable/ic_logo"
        android:background="@drawable/background_round_corner_button"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/last_name"
        android:text="Kahindi"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#4C10B6" />

    <EditText
        android:id="@+id/email_add"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_round_corner_button"
        android:ems="10"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/email_address"
        android:text="samuel@gmail.com"
        android:inputType="textEmailAddress"
        android:textColor="#4C10B6" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:drawableStart="@drawable/ic_emoji"
        android:drawableLeft="@drawable/ic_emoji"
        android:background="@drawable/background_round_corner_button"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/user_name"
        android:text="sam"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#4C10B6" />

    <EditText
        android:id="@+id/passw"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:drawableStart="@drawable/ic_key"
        android:drawableLeft="@drawable/ic_key"
        android:background="@drawable/background_round_corner_button"
        android:ems="10"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/reg_password"
        android:text="password"
        android:inputType="textPassword"
        android:textColor="#4C10B6" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:drawablePadding="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:drawableStart="@drawable/ic_key"
        android:drawableLeft="@drawable/ic_key"
        android:background="@drawable/background_round_corner_button"
        android:ems="10"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/confirm_password"
        android:text="password"
        android:inputType="textPassword"
        android:textColor="#4C10B6" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">
        </ProgressBar>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/cancel_reg"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="197dp"
                android:background="@drawable/background_round_corner_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel"
                android:textColor="#4302B5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="28dp"
                android:background="@drawable/background_round_corner_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/register"
                android:textColor="#4302B5"
                android:textSize="20sp" />
        </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/logging"
            android:textAlignment="center"
            android:textColor="#4C10B6"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#4302B5" />
    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>