<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="#D8D8D8"
    tools:context=".Login">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_marginTop="10dp"
                android:maxWidth="5sp"
                android:minHeight="5sp"
                android:src="@drawable/ic_logo"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:textColor="#4302B5"
                android:padding="10dp"
                android:background="@drawable/background_round_corner_button"
                android:layout_marginRight="32dp"
                android:drawableStart="@drawable/ic_logo"
                android:drawableLeft="@drawable/ic_logo"
                android:drawablePadding="10dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:textColor="#4302B5"
                android:background="@drawable/background_round_corner_button"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="320dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_round_corner_button"
                android:text="@string/login_button"
                android:textColor="#4302B5"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass" />
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">
            </ProgressBar>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:textAlignment="center"
                    android:text="@string/don_t_have_account"
                    android:textColor="#4C10B6"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal">

                </TextView>
                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="3dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="#4302B5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_reset"
                    android:textAlignment="center"
                    android:textColor="#4C10B6"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:id="@+id/log"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingLeft="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/reset_password"
                    android:textAlignment="center"
                    android:textColor="#4302B5" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>