<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Manual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="Home"
            android:textStyle="bold"
            android:textColor="#030304"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/user_manual"
            android:textAlignment="center"
            android:textColor="#030304"
            android:textSize="17sp" />
        <ImageView
            android:id="@+id/imageViewreg"
            android:layout_width="340dp"
            android:layout_height="500dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/user3">
        </ImageView>
        <TextView
            android:text="@string/reg_contents"
            android:fontFamily="sans-serif-light"
            android:textColor="#030304"
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <ImageView
            android:id="@+id/imageViewlog"
            android:layout_width="340dp"
            android:layout_marginTop="30dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:src="@drawable/user2">
        </ImageView>
        <TextView
            android:text="@string/log_contents"
            android:fontFamily="sans-serif-light"
            android:textColor="#030304"
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="340dp"
            android:layout_marginTop="30dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:src="@drawable/user6">
        </ImageView>
        <TextView
            android:text="@string/con_contents"
            android:fontFamily="sans-serif-light"
            android:textColor="#030304"
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <ImageView
            android:id="@+id/imageViewreset"
            android:layout_width="340dp"
            android:layout_marginTop="30dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:src="@drawable/user5">
        </ImageView>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="340dp"
            android:layout_marginTop="30dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:src="@drawable/user4">
        </ImageView>
        <ImageView
            android:id="@+id/imageViewmain"
            android:layout_width="340dp"
            android:layout_marginTop="30dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:src="@drawable/user">
        </ImageView>
        <ImageView
            android:id="@+id/imageViewdrawer"
            android:layout_width="340dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:src="@drawable/user7"/>
    </LinearLayout>
</ScrollView>