<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="#D8D8D8"
    tools:context=".Confirm_password">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/nested_scroll"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/enter_new_password"
                android:textSize="18sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="60dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="5dp"
                    android:id="@+id/new_pin1"
                    android:textSize="20sp"
                    android:background="@drawable/background_round_corner_button"
                    android:padding="10dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="120dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/confirm_new_password"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:layout_margin="0dp"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:id="@+id/new_pin2"
                    android:background="@drawable/background_round_corner_button"
                    android:hint="Confirm new password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="250dp">

                <Button
                    android:id="@+id/btn_cancel_pass"
                    android:layout_width="135dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/background_round_corner_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/cancel"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_new_pass"
                    android:layout_width="135dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/background_round_corner_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:fontFamily="sans-serif"
                    android:text="Reset"
                    android:textSize="20sp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>